--- a/k8s/deploy.yml
+++ b/k8s/deploy.yml
@@ -10,7 +10,7 @@ metadata:
   name: go-finance-api
   namespace: vertwave
 spec:
-  revisionHistoryLimit: 5
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: go-finance-api
@@ -23,8 +23,19 @@ spec:
       containers:
         - name: go-finance-api
           image: vertwave/go-finance-api:latest
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 3000
+            initialDelaySeconds: 15
+            timeoutSeconds: 15
+          env:
+          - name: RUN_AS_LAMBDA
+            value: 'false'
+          - name: GIN_MODE
+            value: 'release'
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           resources:
             requests:
               memory: "64Mi"
@@ -48,5 +59,5 @@ spec:
     - protocol: TCP
       name: http-unsecured
       port: 3000
-      targetPort: 80
+      targetPort: 3000
       
